bug fixes
-now top 100 tracks instead of albums
-using the data from each year, no long load times
-fixed axes
-you can now toggle the axes
-fixed bug where sometimes double the nodes would appear
-fixed valid selector bug
-fixed missing dot bug
-truncate titles that are too long

--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,22 @@ img {
     pointer-events: none;
 }
 
+.yearbrush .handle {
+    pointer-events: none;
+}
+
+.yearbrush .overlay {
+    pointer-events: none;
+}
+
+.weekbrush .handle {
+    pointer-events: none;
+}
+
+.weekbrush .overlay {
+    pointer-events: none;
+}
+
 .node {
     position: absolute;
     overflow: hidden;
